# jobbers

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README2.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  end2end.py  jobbers.code-workspace  openapi.json  otel-config.yaml  package-lock.json  pyproject.toml  pyvenv.cfg  requirements.txt
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: python-app.yml
airflow_jobbers/: __init__.py  executor.py  pyproject.toml
docs/: adapter-selection.md  airflow-integration.md  celery-comparison.md  concepts.md  cron-dags.md  dag-composition.md  dag-error-callback-limitation.md  dags.md  datastore-architecture.md  developer-guide.md  interacting-with-tasks.md  mermaid-dag-spec.md  operations.md  quickstart.md  resource-management.md  routing-backend-feature-matrix.md  routing-backends.md  task-backend-feature-matrix.md  task-definition-reference.md  task-lifecycle.md  taskiq-comparison.md  temporal-comparison.md
frontend/: CLAUDE.md  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: StatusBadge.jsx  TaskNameSelect.jsx
frontend/src/pages/: ActiveTasks.jsx  CronDags.jsx  DagDetail.jsx  DagList.jsx  Dashboard.jsx  DeadLetterQueue.jsx  Queues.jsx  ScheduledTasks.jsx  SubmitDAG.jsx  SubmitTask.jsx  TaskDetail.jsx  TaskList.jsx
frontend/tests/: App.test.jsx
frontend/tests/api/: client.test.js
frontend/tests/components/: StatusBadge.test.jsx  TaskNameSelect.test.jsx
frontend/tests/pages/: Dashboard.test.jsx
jobbers/: __init__.py  airflow_task.py  cleaner_proc.py  constants.py  context.py  db.py  di.py  manager_proc.py  otel.py  protocols.py  registry.py  serialization.py  state_manager.py  sync_runner.py  task_generator.py  task_processor.py  task_routes.py  validation.py  worker_proc.py
jobbers/adapters/: __init__.py  _shared.py  json_redis.py  pipeline.py  protocols.py  raw_redis.py  redis.py  redis_json.py  redis_routing.py  routing_backend.py  sql.py  static.py  static_routing.py  task_adapter.py
jobbers/adapters/redis/: __init__.py  _helpers.py  cancellation_bus.py  cron_dag_scheduler.py  dead_queue.py  routing_backend.py  routing_notifications.py  task_scheduler.py  task_state.py  task_submit.py
jobbers/adapters/redis_json/: __init__.py  _helpers.py  dead_queue.py  routing_backend.py  task_state.py  task_submit.py
jobbers/adapters/sql/: __init__.py  cron_dag_scheduler.py  dead_queue.py  routing_backend.py  task_scheduler.py  task_state.py  task_submit.py
jobbers/adapters/static/: __init__.py  cron_dag_scheduler.py  routing_backend.py
jobbers/adapters/zmq/: __init__.py  bus.py  cancellation_bus.py  routing_notifications.py
jobbers/migrations/: runner.py  schema.py
jobbers/models/: __init__.py  cron_dag.py  cron_dag_scheduler.py  dag.py  dead_queue.py  queue_config.py  task.py  task_adapter.py  task_config.py  task_routing.py  task_scheduler.py  task_shutdown_policy.py  task_status.py
jobbers/runners/: cleaner_proc.py  manager_proc.py  openapi_proc.py  scheduler_proc.py  worker_proc.py
jobbers/schedulers/: cron_dag_scheduler.py  sql_task_scheduler.py  task_scheduler.py
jobbers/utils/: concurrency.py  di.py  lazy_ttl.py  mermaid_dag.py  module_loading.py  otel.py  serialization.py  sql_transaction.py
playground/: manager_proc.py  registry.py  serialization.py  state_manager.py  task_routes.py  worker_proc.py
tests/: _redis_helpers.py  conftest.py  test_context.py  test_db.py  test_di.py  test_end2end.py  test_local_ttl.py  test_max_task_counter.py  test_migrations_runner.py  test_redis_json_schema_version.py  test_registry.py  test_serialization.py  test_state_manager.py  test_sync_tasks.py  test_task_generator.py  test_task_processor.py  test_task_routes.py  test_validation.py
tests/adapters/: conftest.py  test_base_adapter.py  test_cron_dag_scheduler_common.py  test_dead_queue.py  test_dead_queue_common.py  test_json_adapter.py  test_json_dead_queue.py  test_msgpack_adapter.py  test_queue_config_common.py  test_raw_adapters.py  test_redis_json_task_state.py  test_redis_routing_notifications.py  test_redis_task_adapter.py  test_redis_task_state.py  test_redis_task_submit.py  test_routing_backend_common.py  test_sql_adapter.py  test_sql_task_adapter.py  test_sql_task_state.py  test_static_routing.py  test_task_adapter_common.py  test_task_routing_config_common.py  test_task_state_common.py  test_task_submit_common.py  test_zmq_cancellation_bus.py  test_zmq_routing_notifications.py
tests/fixtures/: sync_tasks.py
tests/models/: conftest.py  test_cron_dag_scheduler.py  test_dag.py  test_dead_queue.py  test_queue_config.py  test_task.py  test_task_config.py  test_task_routing.py  test_task_scheduler.py  test_task_shutdown_policy.py  test_task_status.py
tests/runners/: test_cleaner_proc.py  test_openapi_proc.py  test_scheduler_proc.py  test_worker_proc.py
tests/schedulers/: conftest.py  test_cron_dag_scheduler.py  test_cron_dag_scheduler_common.py  test_redis_task_scheduler.py  test_sql_task_scheduler.py  test_task_scheduler.py
tests/utils/: test_concurrency.py  test_di.py  test_mermaid_dag.py  test_module_loading.py  test_serialization.py
